# rtsp-generator

./: Cargo.toml  README.md
scripts/: install-deps.sh  rtsp-gen-tui.sh
src/: cli.rs  config.rs  daemon.rs  device.rs  hotplug.rs  hwaccel.rs  main.rs  mediamtx.rs  netinfo.rs  output.rs  service.rs
